@@ -1,14 +1,14 @@
 package com.fribbels.db;
 
+import com.fribbels.enums.Gear;
 import com.fribbels.model.Hero;
 import com.fribbels.model.HeroStats;
 import com.fribbels.request.OptimizationRequest;
-import com.google.common.collect.ImmutableList;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.EnumMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -25,7 +25,7 @@ public class HeroDb {
     public void addHeroes(final List<Hero> newHeroes) {
         newHeroes.forEach(this::sanitizeHero);
         heroes.addAll(newHeroes);
-        for (int i = 0 ; i < heroes.size(); i++) {
+        for (int i = 0; i < heroes.size(); i++) {
             final Hero hero = heroes.get(i);
             hero.setIndex(i + 1);
         }
@@ -33,7 +33,7 @@ public class HeroDb {
 
     private void sanitizeHero(final Hero hero) {
         if (hero.getEquipment() == null) {
-            hero.setEquipment(new HashMap<>());
+            hero.setEquipment(new EnumMap<>(Gear.class));
         }
         if (hero.getBuilds() == null) {
             hero.setBuilds(new ArrayList<>());
@@ -43,7 +43,7 @@ public class HeroDb {
     public List<Hero> getAllHeroes() {
         return heroes
                 .stream()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setHeroes(final List<Hero> newHeroes) {
@@ -51,9 +51,9 @@ public class HeroDb {
             heroes = new ArrayList<>();
             return;
         }
-        for (int i = 0 ; i < newHeroes.size(); i++) {
+        for (int i = 0; i < newHeroes.size(); i++) {
             final Hero newHero = newHeroes.get(i);
-            newHero.setSkills(baseStatsDb.getBaseStatsByName(newHero.name).getSkills());
+            newHero.setSkills(baseStatsDb.getBaseStatsByName(newHero.getName()).skills());
 
             sanitizeHero(newHero);
             newHero.setIndex(i + 1);
@@ -69,12 +69,14 @@ public class HeroDb {
     }
 
     public void saveOptimizationRequest(final OptimizationRequest request) {
-        if (request.getHero() == null || request.getHero().getId() == null) return;
+        if (request.getHero() == null || request.getHero().getId() == null)
+            return;
 
         final String heroId = request.getHero().getId();
         final Hero hero = getHeroById(heroId);
 
-        if (hero == null) return;
+        if (hero == null)
+            return;
 
         hero.setOptimizationRequest(request
                 .withHero(null)
@@ -83,9 +85,11 @@ public class HeroDb {
     }
 
     public List<HeroStats> getBuildsForHero(final String heroId) {
-        if (heroId == null) return ImmutableList.of();
+        if (heroId == null)
+            return List.of();
         final Hero hero = getHeroById(heroId);
-        if (hero == null) return ImmutableList.of();
+        if (hero == null)
+            return List.of();
 
         if (hero.getBuilds() == null) {
             hero.setBuilds(new ArrayList<>());
@@ -95,19 +99,21 @@ public class HeroDb {
     }
 
     public void addBuildToHero(final String heroId, final HeroStats build) {
-        if (heroId == null || build == null || build.getBuildHash() == null) return;
+        if (heroId == null || build == null || build.getBuildHash() == null)
+            return;
         final Hero hero = getHeroById(heroId);
-        if (hero == null) return;
+        if (hero == null)
+            return;
 
         if (hero.getBuilds() == null) {
             hero.setBuilds(new ArrayList<>());
         }
 
         if (!hero.getBuilds()
-                 .stream()
-                 .map(HeroStats::getBuildHash)
-                 .collect(Collectors.toSet())
-                 .contains(build.getBuildHash())) {
+                .stream()
+                .map(HeroStats::getBuildHash)
+                .collect(Collectors.toSet())
+                .contains(build.getBuildHash())) {
             hero.getBuilds().add(build);
             System.out.println("Found new build. Adding to hero: " + hero);
         }
@@ -115,9 +121,3 @@ public class HeroDb {
         System.out.println("Done adding");
     }
 }
-
-
-// SetHeroes
-// GetHeroById
-// EquipGearOnHero
-//
