@@ -99,7 +99,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
             System.out.println(KernelManager.instance().bestDevice().getType());
 
-
             ExecutorService t = Executors.newFixedThreadPool(3);
             t.execute(() -> {
                 setSolutionBitMasks = new int[SET_EXPONENTIAL];
@@ -110,7 +109,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                             for (int d = 0; d < SET_COUNT; d++) {
                                 for (int e = 0; e < SET_COUNT; e++) {
                                     for (int f = 0; f < SET_COUNT; f++) {
-                                        int[] sets = new int[]{a, b, c, d, e, f};
+                                        int[] sets = new int[] { a, b, c, d, e, f };
                                         int[] counters = convertSetsToSetCounters(sets);
 
                                         int l = 0;
@@ -157,7 +156,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                                         l <<= 1;
                                         l += counters[4] / 2 - 1 > 0 ? 1 : 0; // crit2
                                         l <<= 1;
-                                        l += counters[4] / 2 - 2 > 0 ? 1 : 0;  // crit3
+                                        l += counters[4] / 2 - 2 > 0 ? 1 : 0; // crit3
                                         l <<= 1;
                                         l += counters[3] / 4 > 0 ? 1 : 0; // spd
                                         l <<= 1;
@@ -221,8 +220,8 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     public OptimizationRequestHandler(final BaseStatsDb baseStatsDb,
-                                      final HeroDb heroDb,
-                                      final ItemDb itemDb) {
+            final HeroDb heroDb,
+            final ItemDb itemDb) {
         this.baseStatsDb = baseStatsDb;
         this.heroDb = heroDb;
         this.itemDb = itemDb;
@@ -261,18 +260,21 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                     System.out.println("Sent response");
                     return;
                 case "/optimization/optimizationFilterRequest":
-                    final OptimizationRequest optimizationFilterRequest = parseRequest(exchange, OptimizationRequest.class);
+                    final OptimizationRequest optimizationFilterRequest = parseRequest(exchange,
+                            OptimizationRequest.class);
                     sendResponse(exchange, handleOptimizationFilterRequest(optimizationFilterRequest));
                     System.out.println("Sent response");
                     return;
                 case "/optimization/getResultRows":
-                    final GetResultRowsRequest getResultRowsRequest = parseRequest(exchange, GetResultRowsRequest.class);
+                    final GetResultRowsRequest getResultRowsRequest = parseRequest(exchange,
+                            GetResultRowsRequest.class);
                     System.out.println(getResultRowsRequest);
                     sendResponse(exchange, handleGetResultRowsRequest(getResultRowsRequest));
                     System.out.println("Sent response");
                     return;
                 case "/optimization/editResultRows":
-                    final EditResultRowsRequest editResultRowsRequest = parseRequest(exchange, EditResultRowsRequest.class);
+                    final EditResultRowsRequest editResultRowsRequest = parseRequest(exchange,
+                            EditResultRowsRequest.class);
                     System.out.println(editResultRowsRequest);
                     sendResponse(exchange, handleEditResultRowsRequest(editResultRowsRequest));
                     System.out.println("Sent response");
@@ -286,8 +288,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                     System.out.println("Sent response");
                     return;
                 case "/optimization/getModItems":
-                    final IdRequest getModItemsRequest = parseRequest(exchange, IdRequest.class);
-                    sendResponse(exchange, handleGetModItemsRequest(getModItemsRequest));
+                    sendResponse(exchange, null);
                     System.out.println("Sent response");
                     return;
                 default:
@@ -304,24 +305,14 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         sendResponse(exchange, "ERROR");
     }
 
-    public String handleGetModItemsRequest(final IdRequest request) {
-        return null;
-    }
-
     public String handleInProgressRequest() {
-        final GetInProgressResponse response = GetInProgressResponse.builder()
-                .inProgress(inProgress)
-                .build();
+        final GetInProgressResponse response = new GetInProgressResponse(inProgress);
 
         return gson.toJson(response);
     }
 
     public String handleGetProgressRequest() {
-        final OptimizationResponse response = OptimizationResponse.builder()
-                .searched(searchedCounter.get())
-                .results(resultsCounter.get())
-                .build();
-
+        final OptimizationResponse response = new OptimizationResponse(searchedCounter.get(),  resultsCounter.get());
         return gson.toJson(response);
     }
 
@@ -351,7 +342,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             if (passesUpdatedFilter(request, heroStatsInstance)) {
                 boolean passesGearIdFilter = true;
                 if (hasExcludedGearIds) {
-                    for (final String gearId : heroStatsInstance.items) {
+                    for (final String gearId : heroStatsInstance.getItems()) {
                         if (excludedGearIds.containsKey(gearId)) {
                             passesGearIdFilter = false;
                             break;
@@ -367,7 +358,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             }
         }
 
-//        System.out.println("Indices count: " + count);
         optimizationDb.setFilteredIds(ids, count);
 
         return "";
@@ -375,33 +365,50 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
     private boolean passesUpdatedFilter(final OptimizationRequest request, final HeroStats heroStats) {
         if (heroStats.getAtk() < request.getInputAtkMinLimit() || heroStats.getAtk() > request.getInputAtkMaxLimit()
-                ||  heroStats.getHp()  < request.getInputHpMinLimit()  || heroStats.getHp() > request.getInputHpMaxLimit()
-                ||  heroStats.getDef() < request.getInputDefMinLimit() || heroStats.getDef() > request.getInputDefMaxLimit()
-                ||  heroStats.getSpd() < request.getInputSpdMinLimit() || heroStats.getSpd() > request.getInputSpdMaxLimit()
-                ||  heroStats.getCr() < request.getInputCrMinLimit()   || heroStats.getCr() > request.getInputCrMaxLimit()
-                ||  heroStats.getCd() < request.getInputCdMinLimit()   || heroStats.getCd() > request.getInputCdMaxLimit()
-                ||  heroStats.getEff() < request.getInputEffMinLimit() || heroStats.getEff() > request.getInputEffMaxLimit()
-                ||  heroStats.getRes() < request.getInputResMinLimit() || heroStats.getRes() > request.getInputResMaxLimit()
-                ||  heroStats.getCp() < request.getInputMinCpLimit() || heroStats.getCp() > request.getInputMaxCpLimit()
-                ||  heroStats.getHpps() < request.getInputMinHppsLimit() || heroStats.getHpps() > request.getInputMaxHppsLimit()
-                ||  heroStats.getEhp() < request.getInputMinEhpLimit() || heroStats.getEhp() > request.getInputMaxEhpLimit()
-                ||  heroStats.getEhpps() < request.getInputMinEhppsLimit() || heroStats.getEhpps() > request.getInputMaxEhppsLimit()
-                ||  heroStats.getDmg() < request.getInputMinDmgLimit() || heroStats.getDmg() > request.getInputMaxDmgLimit()
-                ||  heroStats.getDmgps() < request.getInputMinDmgpsLimit() || heroStats.getDmgps() > request.getInputMaxDmgpsLimit()
-                ||  heroStats.getMcdmg() < request.getInputMinMcdmgLimit() || heroStats.getMcdmg() > request.getInputMaxMcdmgLimit()
-                ||  heroStats.getMcdmgps() < request.getInputMinMcdmgpsLimit() || heroStats.getMcdmgps() > request.getInputMaxMcdmgpsLimit()
-                ||  heroStats.getDmgh() < request.getInputMinDmgHLimit() || heroStats.getDmgh() > request.getInputMaxDmgHLimit()
-                ||  heroStats.getDmgd() < request.getInputMinDmgDLimit() || heroStats.getDmgd() > request.getInputMaxDmgDLimit()
-                ||  heroStats.getS1() < request.getInputMinS1Limit() || heroStats.getS1() > request.getInputMaxS1Limit()
-                ||  heroStats.getS2() < request.getInputMinS2Limit() || heroStats.getS2() > request.getInputMaxS2Limit()
-                ||  heroStats.getS3() < request.getInputMinS3Limit() || heroStats.getS3() > request.getInputMaxS3Limit()
-                ||  heroStats.getScore() < request.getInputMinScoreLimit() || heroStats.getScore() > request.getInputMaxScoreLimit()
-                ||  heroStats.getBs() < request.getInputMinBSLimit() || heroStats.getBs() > request.getInputMaxBSLimit()
-                ||  heroStats.getPriority() < request.getInputMinPriorityLimit() || heroStats.getPriority() > request.getInputMaxPriorityLimit()
-                ||  heroStats.getUpgrades() < request.getInputMinUpgradesLimit() || heroStats.getUpgrades() > request.getInputMaxUpgradesLimit()
-                ||  heroStats.getConversions() < request.getInputMinConversionsLimit() || heroStats.getConversions() > request.getInputMaxConversionsLimit()
-                ||  heroStats.getEq() < request.getInputMinEquippedLimit() || heroStats.getEq() > request.getInputMaxEquippedLimit()
-        ) {
+                || heroStats.getHp() < request.getInputHpMinLimit() || heroStats.getHp() > request.getInputHpMaxLimit()
+                || heroStats.getDef() < request.getInputDefMinLimit()
+                || heroStats.getDef() > request.getInputDefMaxLimit()
+                || heroStats.getSpd() < request.getInputSpdMinLimit()
+                || heroStats.getSpd() > request.getInputSpdMaxLimit()
+                || heroStats.getCr() < request.getInputCrMinLimit() || heroStats.getCr() > request.getInputCrMaxLimit()
+                || heroStats.getCd() < request.getInputCdMinLimit() || heroStats.getCd() > request.getInputCdMaxLimit()
+                || heroStats.getEff() < request.getInputEffMinLimit()
+                || heroStats.getEff() > request.getInputEffMaxLimit()
+                || heroStats.getRes() < request.getInputResMinLimit()
+                || heroStats.getRes() > request.getInputResMaxLimit()
+                || heroStats.getCp() < request.getInputMinCpLimit() || heroStats.getCp() > request.getInputMaxCpLimit()
+                || heroStats.getHpps() < request.getInputMinHppsLimit()
+                || heroStats.getHpps() > request.getInputMaxHppsLimit()
+                || heroStats.getEhp() < request.getInputMinEhpLimit()
+                || heroStats.getEhp() > request.getInputMaxEhpLimit()
+                || heroStats.getEhpps() < request.getInputMinEhppsLimit()
+                || heroStats.getEhpps() > request.getInputMaxEhppsLimit()
+                || heroStats.getDmg() < request.getInputMinDmgLimit()
+                || heroStats.getDmg() > request.getInputMaxDmgLimit()
+                || heroStats.getDmgps() < request.getInputMinDmgpsLimit()
+                || heroStats.getDmgps() > request.getInputMaxDmgpsLimit()
+                || heroStats.getMcdmg() < request.getInputMinMcdmgLimit()
+                || heroStats.getMcdmg() > request.getInputMaxMcdmgLimit()
+                || heroStats.getMcdmgps() < request.getInputMinMcdmgpsLimit()
+                || heroStats.getMcdmgps() > request.getInputMaxMcdmgpsLimit()
+                || heroStats.getDmgh() < request.getInputMinDmgHLimit()
+                || heroStats.getDmgh() > request.getInputMaxDmgHLimit()
+                || heroStats.getDmgd() < request.getInputMinDmgDLimit()
+                || heroStats.getDmgd() > request.getInputMaxDmgDLimit()
+                || heroStats.getS1() < request.getInputMinS1Limit() || heroStats.getS1() > request.getInputMaxS1Limit()
+                || heroStats.getS2() < request.getInputMinS2Limit() || heroStats.getS2() > request.getInputMaxS2Limit()
+                || heroStats.getS3() < request.getInputMinS3Limit() || heroStats.getS3() > request.getInputMaxS3Limit()
+                || heroStats.getScore() < request.getInputMinScoreLimit()
+                || heroStats.getScore() > request.getInputMaxScoreLimit()
+                || heroStats.getBs() < request.getInputMinBSLimit() || heroStats.getBs() > request.getInputMaxBSLimit()
+                || heroStats.getPriority() < request.getInputMinPriorityLimit()
+                || heroStats.getPriority() > request.getInputMaxPriorityLimit()
+                || heroStats.getUpgrades() < request.getInputMinUpgradesLimit()
+                || heroStats.getUpgrades() > request.getInputMaxUpgradesLimit()
+                || heroStats.getConversions() < request.getInputMinConversionsLimit()
+                || heroStats.getConversions() > request.getInputMaxConversionsLimit()
+                || heroStats.getEq() < request.getInputMinEquippedLimit()
+                || heroStats.getEq() > request.getInputMaxEquippedLimit()) {
             return false;
         }
         return true;
@@ -448,10 +455,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
     private String handleGetResultRowsRequest(final GetResultRowsRequest request) {
         if (request.getExecutionId() == null) {
-            final GetResultRowsResponse response = GetResultRowsResponse.builder()
-                    .heroStats(new HeroStats[]{})
-                    .maximum(0)
-                    .build();
+            final GetResultRowsResponse response = new GetResultRowsResponse(new HeroStats[] {}, 0);
             return gson.toJson(response);
         }
         final OptimizationDb optimizationDb = optimizationDbs.get(request.getExecutionId());
@@ -483,10 +487,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         }
 
         final long maximum = optimizationDb.getMaximum();
-        final GetResultRowsResponse response = GetResultRowsResponse.builder()
-                .heroStats(heroStats)
-                .maximum(maximum)
-                .build();
+        final GetResultRowsResponse response = new GetResultRowsResponse(heroStats, maximum);
         return gson.toJson(response);
     }
 
@@ -504,31 +505,30 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         final HeroStats heroStat = heroStats[0];
 
         heroStat.setProperty(request.getProperty());
-//        System.out.println(heroStat);
 
         return "";
     }
 
-    public void fillAccs(StatCalculator statCalculator, Item[] items, HeroStats base, Map<String, float[]> accumulatorArrsByItemId, boolean useReforgeStats) {
+    public void fillAccs(StatCalculator statCalculator, Item[] items, HeroStats base, boolean useReforgeStats) {
         for (int i = 0; i < items.length; i++) {
-            items[i].tempStatAccArr = statCalculator.getNewStatAccumulatorArr(base, items[i], accumulatorArrsByItemId, useReforgeStats);
+            items[i].setTempStatAccArr(statCalculator.getNewStatAccumulatorArr(base, items[i], useReforgeStats));
         }
     }
 
-    public float[] flattenAccArrs(final Item[] items, final StatCalculator statCalculator) {
+    public float[] flattenAccArrs(final Item[] items) {
         final int outputSize = items.length * ARG_COUNT;
         final float[] output = new float[outputSize];
 
         for (int i = 0; i < items.length; i++) {
             final Item item = items[i];
             for (int j = 0; j < ARG_COUNT - 5; j++) {
-                output[i*ARG_COUNT + j] = item.tempStatAccArr[j];
+                output[i * ARG_COUNT + j] = item.getTempStatAccArr()[j];
             }
-            output[i*ARG_COUNT + ARG_COUNT - 5] = item.set.index;
-            output[i*ARG_COUNT + ARG_COUNT - 4] = item.priority;
-            output[i*ARG_COUNT + ARG_COUNT - 3] = item.upgradeable;
-            output[i*ARG_COUNT + ARG_COUNT - 2] = item.convertable;
-            output[i*ARG_COUNT + ARG_COUNT - 1] = item.alreadyEquipped;
+            output[i * ARG_COUNT + ARG_COUNT - 5] = item.getSet().getIndex();
+            output[i * ARG_COUNT + ARG_COUNT - 4] = item.getPriority();
+            output[i * ARG_COUNT + ARG_COUNT - 3] = item.getUpgradeable();
+            output[i * ARG_COUNT + ARG_COUNT - 2] = item.getConvertable();
+            output[i * ARG_COUNT + ARG_COUNT - 1] = item.getAlreadyEquipped();
 
             // 0 atk
             // 1 hp
@@ -575,7 +575,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         }
 
         inProgress = true;
-        final HeroStats base = baseStatsDb.getBaseStatsByName(request.hero.name, request.hero.getStars());
+        final HeroStats base = baseStatsDb.getBaseStatsByName(request.getHero().getName(), request.getHero().getStars());
         System.out.println("Started optimization request");
         addCalculatedFields(request);
         final boolean useReforgeStats = request.getInputPredictReforges();
@@ -598,18 +598,17 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         final List<Item> items = priorityItems;
 
         items.forEach(item -> {
-            final String id = request.hero.getId();
+            final String id = request.getHero().getId();
             final String equippedId = item.getEquippedById();
 
             if (!StringUtils.equals(id, equippedId) && StringUtils.isNotBlank(equippedId)) {
-                item.alreadyEquipped = 1;
+                item.setAlreadyEquipped(1);
             }
         });
 
         final int MAXIMUM_RESULTS = SETTING_MAXIMUM_RESULTS;
         System.out.println("Start allocating memory");
         final HeroStats[] resultHeroStats = new HeroStats[MAXIMUM_RESULTS];
-//        final long[] resultInts = new long[MAXIMUM_RESULTS];
         System.out.println("Finished allocating memory");
 
         final Map<Gear, List<Item>> itemsByGear = buildItemsByGear(items);
@@ -633,12 +632,12 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         final Item[] allrings = itemsByGear.get(Gear.RING).toArray(new Item[0]);
         final Item[] allboots = itemsByGear.get(Gear.BOOTS).toArray(new Item[0]);
 
-        fillAccs(statCalculator, allweapons, base, accumulatorArrsByItemId, useReforgeStats);
-        fillAccs(statCalculator, allhelmets, base, accumulatorArrsByItemId, useReforgeStats);
-        fillAccs(statCalculator, allarmors, base, accumulatorArrsByItemId, useReforgeStats);
-        fillAccs(statCalculator, allnecklaces, base, accumulatorArrsByItemId, useReforgeStats);
-        fillAccs(statCalculator, allrings, base, accumulatorArrsByItemId, useReforgeStats);
-        fillAccs(statCalculator, allboots, base, accumulatorArrsByItemId, useReforgeStats);
+        fillAccs(statCalculator, allweapons, base, useReforgeStats);
+        fillAccs(statCalculator, allhelmets, base, useReforgeStats);
+        fillAccs(statCalculator, allarmors, base, useReforgeStats);
+        fillAccs(statCalculator, allnecklaces, base, useReforgeStats);
+        fillAccs(statCalculator, allrings, base, useReforgeStats);
+        fillAccs(statCalculator, allboots, base, useReforgeStats);
 
         final AtomicInteger maxReached = new AtomicInteger();
 
@@ -646,43 +645,50 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
         System.out.println("OUTPUTSTART");
 
-        statCalculator.setBaseValues(base, request.hero);
+        statCalculator.setBaseValues(base, request.getHero());
 
-        final float[] flattenedWeaponAccs = flattenAccArrs(allweapons, statCalculator);
-        final float[] flattenedHelmetAccs = flattenAccArrs(allhelmets, statCalculator);
-        final float[] flattenedArmorAccs = flattenAccArrs(allarmors, statCalculator);
-        final float[] flattenedNecklaceAccs = flattenAccArrs(allnecklaces, statCalculator);
-        final float[] flattenedRingAccs = flattenAccArrs(allrings, statCalculator);
-        final float[] flattenedBootAccs = flattenAccArrs(allboots, statCalculator);
+        final float[] flattenedWeaponAccs = flattenAccArrs(allweapons);
+        final float[] flattenedHelmetAccs = flattenAccArrs(allhelmets);
+        final float[] flattenedArmorAccs = flattenAccArrs(allarmors);
+        final float[] flattenedNecklaceAccs = flattenAccArrs(allnecklaces);
+        final float[] flattenedRingAccs = flattenAccArrs(allrings);
+        final float[] flattenedBootAccs = flattenAccArrs(allboots);
 
-        final Hero hero = request.hero;
+        final Hero hero = request.getHero();
 
-        final float atkSetBonus = 0.45f * base.atk;
-        final float hpSetBonus = 0.20f * base.hp;
-        final float defSetBonus = 0.20f * base.def;
+        final float atkSetBonus = 0.45f * base.getAtk();
+        final float hpSetBonus = 0.20f * base.getHp();
+        final float defSetBonus = 0.20f * base.getDef();
 
-        final float speedSetBonus = 0.25f * base.spd;
-        final float revengeSetBonus = 0.12f * base.spd;
+        final float speedSetBonus = 0.25f * base.getSpd();
+        final float revengeSetBonus = 0.12f * base.getSpd();
 
-        final float bonusBaseAtk = base.atk + base.atk * (hero.bonusAtkPercent + hero.aeiAtkPercent) / 100f + hero.bonusAtk + hero.aeiAtk;
-        final float bonusBaseHp = base.hp + base.hp * (hero.bonusHpPercent + hero.aeiHpPercent) / 100f + hero.bonusHp + hero.aeiHp;
-        final float bonusBaseDef = base.def + base.def * (hero.bonusDefPercent + hero.aeiDefPercent) / 100f + hero.bonusDef + hero.aeiDef;
+        final float bonusBaseAtk = base.getAtk()
+                + base.getAtk() * (hero.getBonusAtkPercent() + hero.getAeiAtkPercent()) / 100f
+                + hero.getBonusAtk() + hero.getAeiAtk();
+        final float bonusBaseHp = base.getHp()
+                + base.getHp() * (hero.getBonusHpPercent() + hero.getAeiHpPercent()) / 100f + hero.getBonusHp()
+                + hero.getAeiHp();
+        final float bonusBaseDef = base.getDef()
+                + base.getDef() * (hero.getBonusDefPercent() + hero.getAeiDefPercent()) / 100f
+                + hero.getBonusDef() + hero.getAeiDef();
 
         final float bonusMaxAtk;
         final float bonusMaxHp;
         final float bonusMaxDef;
 
-        if (base.bonusStats == null) {
-            bonusMaxAtk = 1 + hero.finalAtkMultiplier / 100;
-            bonusMaxHp = 1 + hero.finalHpMultiplier / 100;
-            bonusMaxDef = 1 + hero.finalDefMultiplier / 100;
+        if (base.getBonusStats() == null) {
+            bonusMaxAtk = 1 + hero.getFinalAtkMultiplier() / 100;
+            bonusMaxHp = 1 + hero.getFinalHpMultiplier() / 100;
+            bonusMaxDef = 1 + hero.getFinalDefMultiplier() / 100;
         } else {
-            bonusMaxAtk = 1 + base.bonusStats.bonusMaxAtkPercent/100f + hero.finalAtkMultiplier / 100;
-            bonusMaxHp = 1 + base.bonusStats.bonusMaxHpPercent/100f + hero.finalHpMultiplier / 100;
-            bonusMaxDef = 1 + base.bonusStats.bonusMaxDefPercent/100f + hero.finalDefMultiplier / 100;
+            bonusMaxAtk = 1 + base.getBonusStats().getBonusMaxAtkPercent() / 100f + hero.getFinalAtkMultiplier() / 100;
+            bonusMaxHp = 1 + base.getBonusStats().getBonusMaxHpPercent() / 100f + hero.getFinalHpMultiplier() / 100;
+            bonusMaxDef = 1 + base.getBonusStats().getBonusMaxDefPercent() / 100f + hero.getFinalDefMultiplier() / 100;
         }
 
-        final float penSetDmgBonus = (StatCalculator.SETTING_PEN_DEFENSE/300f + 1) / (0.00283333f * StatCalculator.SETTING_PEN_DEFENSE + 1);
+        final float penSetDmgBonus = (StatCalculator.SETTING_PEN_DEFENSE / 300f + 1)
+                / (0.00283333f * StatCalculator.SETTING_PEN_DEFENSE + 1);
 
         final int SETTING_RAGE_SET = StatCalculator.SETTING_RAGE_SET ? 1 : 0;
         final int SETTING_PEN_SET = StatCalculator.SETTING_PEN_SET ? 1 : 0;
@@ -691,18 +697,11 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
         final GpuOptimizerKernel kernel;
 
-        hero.setDamageMultipliers(request.damageMultipliers);
+        hero.setDamageMultipliers(request.getDamageMultipliers());
         heroDb.getHeroById(hero.getId()).setDamageMultipliers(request.getDamageMultipliers());
-
-//        System.out.println();
-
-//        System.out.println("multis");
-//        System.out.println(request.damageMultipliers.toString());
 
         if (SETTING_GPU && canUseGpu && maxPerms >= 20_000_000) {
             // GPU Optimize
-
-//            final int max = 2097152;
             final int max = 1048576;
 
             kernel = selectKernel(
@@ -737,15 +736,13 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                     nSize,
                     rSize,
                     bSize,
-                    max, setSolutionBitMasks
-            );
+                    max, setSolutionBitMasks);
 
             try {
 
                 int maxWorkGroupSize = 64;
 
                 try {
-                    //                final Device bestDevice = KernelManager.instance().bestDevice();
 
                     List<OpenCLPlatform> platforms = OpenCLPlatform.getUncachedOpenCLPlatforms();
                     final Optional<OpenCLDevice> bestDevice = platforms.stream()
@@ -814,7 +811,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                             .filter(x -> x.getDeviceId() == Main.BEST_DEVICE_ID)
                             .findFirst();
 
-                    while(executionCounter.get() > 1 && !exit.get() && !Main.interrupt) {
+                    while (executionCounter.get() > 1 && !exit.get() && !Main.interrupt) {
                         Thread.sleep(10);
                     }
 
@@ -831,16 +828,12 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                         break;
                     }
 
-
                     executorService.submit(() -> {
                         try {
                             searchedCounter.addAndGet(Math.min(max, maxPerms));
 
                             for (int j = 0; j < max; j++) {
                                 final long iteration = ((long) finalI) * max + j;
-
-                                //                    System.out.println(longSetMasks[0]);
-                                //                    System.out.println(debug[j]);
 
                                 if (passes[j]) {
                                     if (iteration >= maxPerms) {
@@ -853,9 +846,13 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                                     final int b = (int) (iteration % bSize);
                                     final int r = (int) (((iteration - b) / bSize) % rSize);
                                     final int n = (int) (((iteration - r * bSize - b) / (bSize * rSize)) % nSize);
-                                    final int a = (int) (((iteration - n * rSize * bSize - r * bSize - b) / (bSize * rSize * nSize)) % aSize);
-                                    final int h = (int) (((iteration - a * nSize * rSize * bSize - n * rSize * bSize - r * bSize - b) / (bSize * rSize * nSize * aSize)) % hSize);
-                                    final int w = (int) (((iteration - h * aSize * nSize * rSize * bSize - a * nSize * rSize * bSize - n * rSize * bSize - r * bSize - b) / (bSize * rSize * nSize * aSize * hSize)) % wSize);
+                                    final int a = (int) (((iteration - n * rSize * bSize - r * bSize - b)
+                                            / (bSize * rSize * nSize)) % aSize);
+                                    final int h = (int) (((iteration - a * nSize * rSize * bSize - n * rSize * bSize
+                                            - r * bSize - b) / (bSize * rSize * nSize * aSize)) % hSize);
+                                    final int w = (int) (((iteration - h * aSize * nSize * rSize * bSize
+                                            - a * nSize * rSize * bSize - n * rSize * bSize - r * bSize - b)
+                                            / (bSize * rSize * nSize * aSize * hSize)) % wSize);
 
                                     final Item weapon = allweapons[w];
                                     final Item helmet = allhelmets[h];
@@ -864,22 +861,47 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                                     final Item ring = allrings[r];
                                     final Item boots = allboots[b];
 
-                                    final Item[] collectedItems = new Item[]{weapon, helmet, armor, necklace, ring, boots};
+                                    final Item[] collectedItems = new Item[] { weapon, helmet, armor, necklace, ring,
+                                            boots };
                                     final int[] collectedSets = statCalculator.buildSetsArr(collectedItems);
 
-                                    final int reforges = weapon.upgradeable + helmet.upgradeable + armor.upgradeable + necklace.upgradeable + ring.upgradeable + boots.upgradeable;
-                                    final int conversions = weapon.convertable + helmet.convertable + armor.convertable + necklace.convertable + ring.convertable + boots.convertable;
-                                    final int alreadyEquipped = weapon.alreadyEquipped + helmet.alreadyEquipped + armor.alreadyEquipped + necklace.alreadyEquipped + ring.alreadyEquipped + boots.alreadyEquipped;
-                                    final int priority = weapon.priority + helmet.priority + armor.priority + necklace.priority + ring.priority + boots.priority;
-                                    final HeroStats result = statCalculator.addAccumulatorArrsToHero(base, new float[][]{weapon.tempStatAccArr, helmet.tempStatAccArr, armor.tempStatAccArr, necklace.tempStatAccArr, ring.tempStatAccArr, boots.tempStatAccArr}, collectedSets, request.hero, reforges, conversions, alreadyEquipped, priority);
+                                    final int reforges = weapon.getUpgradeable() + helmet.getUpgradeable()
+                                            + armor.getUpgradeable()
+                                            + necklace.getUpgradeable() + ring.getUpgradeable()
+                                            + boots.getUpgradeable();
+                                    final int conversions = weapon.getConvertable() + helmet.getConvertable()
+                                            + armor.getConvertable()
+                                            + necklace.getConvertable() + ring.getConvertable()
+                                            + boots.getConvertable();
+                                    final int alreadyEquipped = weapon.getAlreadyEquipped()
+                                            + helmet.getAlreadyEquipped()
+                                            + armor.getAlreadyEquipped() + necklace.getAlreadyEquipped()
+                                            + ring.getAlreadyEquipped()
+                                            + boots.getAlreadyEquipped();
+                                    final int priority = weapon.getPriority() + helmet.getPriority()
+                                            + armor.getPriority()
+                                            + necklace.getPriority() + ring.getPriority() + boots.getPriority();
+                                    final HeroStats result = statCalculator.addAccumulatorArrsToHero(base,
+                                            new float[][] { weapon.getTempStatAccArr(), helmet.getTempStatAccArr(),
+                                                    armor.getTempStatAccArr(), necklace.getTempStatAccArr(),
+                                                    ring.getTempStatAccArr(),
+                                                    boots.getTempStatAccArr() },
+                                            collectedSets, request.getHero(), reforges, conversions, alreadyEquipped,
+                                            priority);
 
                                     result.setSets(collectedSets);
-                                    result.setItems(ImmutableList.of(allweapons[w].getId(), allhelmets[h].getId(), allarmors[a]
-                                            .getId(), allnecklaces[n].id, allrings[r].id, allboots[b].id));
-                                    result.setModIds(ImmutableList.of(allweapons[w].getModId(), allhelmets[h].getModId(), allarmors[a]
-                                            .getModId(), allnecklaces[n].modId, allrings[r].modId, allboots[b].modId));
-                                    result.setMods(Lists.newArrayList(allweapons[w].getMod(), allhelmets[h].getMod(), allarmors[a]
-                                            .getMod(), allnecklaces[n].getMod(), allrings[r].getMod(), allboots[b].getMod()));
+                                    result.setItems(
+                                            List.of(allweapons[w].getId(), allhelmets[h].getId(), allarmors[a]
+                                                    .getId(), allnecklaces[n].getId(), allrings[r].getId(), allboots[b].getId()));
+                                    result.setModIds(List.of(allweapons[w].getModId(),
+                                            allhelmets[h].getModId(), allarmors[a]
+                                                    .getModId(),
+                                            allnecklaces[n].getModId(), allrings[r].getModId(),
+                                            allboots[b].getModId()));
+                                    result.setMods(Lists.newArrayList(allweapons[w].getMod(), allhelmets[h].getMod(),
+                                            allarmors[a]
+                                                    .getMod(),
+                                            allnecklaces[n].getMod(), allrings[r].getMod(), allboots[b].getMod()));
 
                                     final long resultsIndex = resultsCounter.getAndIncrement();
 
@@ -911,28 +933,31 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
             for (int w = 0; w < wSize; w++) {
                 final Item weapon = itemsByGear.get(Gear.WEAPON).get(w);
-//                final long finalW = w;
 
                 executorService.submit(() -> {
                     boolean exit = false;
                     try {
 
-                        final float[] weaponAccumulatorArr = statCalculator.getStatAccumulatorArr(base, weapon, accumulatorArrsByItemId, useReforgeStats);
+                        final float[] weaponAccumulatorArr = statCalculator.getStatAccumulatorArr(base, weapon,
+                                accumulatorArrsByItemId, useReforgeStats);
 
                         for (int h = 0; h < hSize; h++) {
                             final Item helmet = itemsByGear.get(Gear.HELMET).get(h);
-                            final float[] helmetAccumulatorArr = statCalculator.getStatAccumulatorArr(base, helmet, accumulatorArrsByItemId, useReforgeStats);
+                            final float[] helmetAccumulatorArr = statCalculator.getStatAccumulatorArr(base, helmet,
+                                    accumulatorArrsByItemId, useReforgeStats);
 
                             for (int a = 0; a < aSize; a++) {
                                 final Item armor = itemsByGear.get(Gear.ARMOR).get(a);
-                                final float[] armorAccumulatorArr = statCalculator.getStatAccumulatorArr(base, armor, accumulatorArrsByItemId, useReforgeStats);
+                                final float[] armorAccumulatorArr = statCalculator.getStatAccumulatorArr(base, armor,
+                                        accumulatorArrsByItemId, useReforgeStats);
 
-                                // For 4 piece sets, we can short circuit if the first 3 pieces don't match possible sets,
+                                // For 4 piece sets, we can short circuit if the first 3 pieces don't match
+                                // possible sets,
                                 // but only if the items are sorted & prioritized by set.
                                 if (isShortCircuitable4PieceSet) {
                                     if (!(firstSets.contains(weapon.getSet())
-                                            ||    firstSets.contains(helmet.getSet())
-                                            ||    firstSets.contains(armor.getSet()))) {
+                                            || firstSets.contains(helmet.getSet())
+                                            || firstSets.contains(armor.getSet()))) {
                                         // continue not return because other helmets may work
                                         break;
                                     }
@@ -940,39 +965,56 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
                                 for (int n = 0; n < nSize; n++) {
                                     final Item necklace = itemsByGear.get(Gear.NECKLACE).get(n);
-                                    final float[] necklaceAccumulatorArr = statCalculator.getStatAccumulatorArr(base, necklace, accumulatorArrsByItemId, useReforgeStats);
+                                    final float[] necklaceAccumulatorArr = statCalculator.getStatAccumulatorArr(base,
+                                            necklace, accumulatorArrsByItemId, useReforgeStats);
 
                                     for (int r = 0; r < rSize; r++) {
                                         final Item ring = itemsByGear.get(Gear.RING).get(r);
-                                        final float[] ringAccumulatorArr = statCalculator.getStatAccumulatorArr(base, ring, accumulatorArrsByItemId, useReforgeStats);
+                                        final float[] ringAccumulatorArr = statCalculator.getStatAccumulatorArr(base,
+                                                ring, accumulatorArrsByItemId, useReforgeStats);
 
                                         for (int b = 0; b < bSize; b++) {
                                             if (Main.interrupt) {
                                                 executorService.shutdownNow();
                                                 return;
                                             }
-                                            if (exit) return;
+                                            if (exit)
+                                                return;
 
                                             final Item boots = itemsByGear.get(Gear.BOOTS).get(b);
-                                            final float[] bootsAccumulatorArr = statCalculator.getStatAccumulatorArr(base, boots, accumulatorArrsByItemId, useReforgeStats);
+                                            final float[] bootsAccumulatorArr = statCalculator.getStatAccumulatorArr(
+                                                    base, boots, accumulatorArrsByItemId, useReforgeStats);
 
-                                            final Item[] collectedItems = new Item[]{weapon, helmet, armor, necklace, ring, boots};
+                                            final Item[] collectedItems = new Item[] { weapon, helmet, armor, necklace,
+                                                    ring, boots };
                                             final int[] collectedSets = statCalculator.buildSetsArr(collectedItems);
-                                            final int reforges = weapon.upgradeable + helmet.upgradeable + armor.upgradeable + necklace.upgradeable + ring.upgradeable + boots.upgradeable;
-                                            final int conversions = weapon.convertable + helmet.convertable + armor.convertable + necklace.convertable + ring.convertable + boots.convertable;
-                                            final int alreadyEquipped = weapon.alreadyEquipped + helmet.alreadyEquipped + armor.alreadyEquipped + necklace.alreadyEquipped + ring.alreadyEquipped + boots.alreadyEquipped;
-                                            final int priority = weapon.priority + helmet.priority + armor.priority + necklace.priority + ring.priority + boots.priority;
+                                            final int reforges = weapon.getUpgradeable() + helmet.getUpgradeable()
+                                                    + armor.getUpgradeable() + necklace.getUpgradeable()
+                                                    + ring.getUpgradeable()
+                                                    + boots.getUpgradeable();
+                                            final int conversions = weapon.getConvertable() + helmet.getConvertable()
+                                                    + armor.getConvertable() + necklace.getConvertable()
+                                                    + ring.getConvertable()
+                                                    + boots.getConvertable();
+                                            final int alreadyEquipped = weapon.getAlreadyEquipped()
+                                                    + helmet.getAlreadyEquipped()
+                                                    + armor.getAlreadyEquipped() + necklace.getAlreadyEquipped()
+                                                    + ring.getAlreadyEquipped() + boots.getAlreadyEquipped();
+                                            final int priority = weapon.getPriority() + helmet.getPriority()
+                                                    + armor.getPriority()
+                                                    + necklace.getPriority() + ring.getPriority() + boots.getPriority();
                                             final HeroStats result = statCalculator.addAccumulatorArrsToHero(
                                                     base,
-                                                    new float[][]{weaponAccumulatorArr, helmetAccumulatorArr, armorAccumulatorArr, necklaceAccumulatorArr, ringAccumulatorArr, bootsAccumulatorArr},
+                                                    new float[][] { weaponAccumulatorArr, helmetAccumulatorArr,
+                                                            armorAccumulatorArr, necklaceAccumulatorArr,
+                                                            ringAccumulatorArr, bootsAccumulatorArr },
                                                     collectedSets,
-                                                    request.hero,
+                                                    request.getHero(),
                                                     reforges,
                                                     conversions,
                                                     alreadyEquipped,
                                                     priority);
                                             searchedCounter.getAndIncrement();
-                                            //                                        final boolean passesFilter = true;
 
                                             final boolean passesFilter = passesFilter(result, request, collectedSets);
                                             result.setSets(collectedSets);
@@ -981,38 +1023,32 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                                                 if (resultsIndex < MAXIMUM_RESULTS) {
                                                     result.setId("" + resultsIndex);
 
-//                                                    final long index1D = finalW * hSize * aSize * nSize * rSize * bSize + h * aSize * nSize * rSize * bSize + a * nSize * rSize * bSize + n * rSize * bSize + r * bSize + b;
-
-                                                    result.setItems(ImmutableList.of(
+                                                    result.setItems(List.of(
                                                             weapon.getId(),
                                                             helmet.getId(),
                                                             armor.getId(),
                                                             necklace.getId(),
                                                             ring.getId(),
-                                                            boots.getId()
-                                                    ));
-                                                    result.setModIds(ImmutableList.of(
+                                                            boots.getId()));
+                                                    result.setModIds(List.of(
                                                             weapon.getModId(),
                                                             helmet.getModId(),
                                                             armor.getModId(),
                                                             necklace.getModId(),
                                                             ring.getModId(),
-                                                            boots.getModId()
-                                                    ));
+                                                            boots.getModId()));
                                                     result.setMods(Lists.newArrayList(
                                                             weapon.getMod(),
                                                             helmet.getMod(),
                                                             armor.getMod(),
                                                             necklace.getMod(),
                                                             ring.getMod(),
-                                                            boots.getMod()
-                                                    ));
+                                                            boots.getMod()));
 
                                                     resultHeroStats[(int) resultsIndex] = result;
-//                                                    resultInts[(int) resultsIndex] = index1D;
 
-                                                    if (resultsIndex == MAXIMUM_RESULTS-1) {
-                                                        maxReached.set(MAXIMUM_RESULTS-1);
+                                                    if (resultsIndex == MAXIMUM_RESULTS - 1) {
+                                                        maxReached.set(MAXIMUM_RESULTS - 1);
                                                     }
                                                 } else {
                                                     System.out.println("EXIT");
@@ -1033,7 +1069,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             }
         }
 
-
         System.out.println("DONE");
         System.out.printf("*** Time taken: %s ms%n", System.currentTimeMillis() - startTime);
 
@@ -1042,17 +1077,14 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             executorService.awaitTermination(50000000, TimeUnit.SECONDS);
 
             try {
-                final long size = maxReached.get() == MAXIMUM_RESULTS-1 ? MAXIMUM_RESULTS : resultsCounter.get();
+                final long size = maxReached.get() == MAXIMUM_RESULTS - 1 ? MAXIMUM_RESULTS : resultsCounter.get();
                 System.out.println("MaxReached: " + size);
 
                 optimizationDb.setResultHeroes(resultHeroStats, size);
 
                 System.out.println("OPTIMIZATION_REQUEST_END");
                 System.out.println("PROGRESS: [" + size + "]");
-                OptimizationResponse response = OptimizationResponse.builder()
-                        .searched(Math.min(searchedCounter.get(), maxPerms))
-                        .results(resultsCounter.get())
-                        .build();
+                OptimizationResponse response = new OptimizationResponse(Math.min(searchedCounter.get(), maxPerms), resultsCounter.get());
 
                 inProgress = false;
 
@@ -1060,6 +1092,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             } catch (final Exception e) {
                 inProgress = false;
                 e.printStackTrace();
+                Thread.currentThread().interrupt();
             }
         } catch (final Exception e) {
             inProgress = false;
@@ -1072,7 +1105,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     public int[] convertSetsArrayIntoIndexArray(final int[] sets) {
-        final int[] output = new int[]{0, 0, 0, 0, 0, 0};
+        final int[] output = new int[] { 0, 0, 0, 0, 0, 0 };
         int count = 0;
 
         for (int i = 0; i < SET_COUNT; i++) {
@@ -1088,7 +1121,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     public int[] convertSetsToSetCounters(final int[] sets) {
-        final int[] output = new int[]{0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0}; // Length of SET_COUNT
+        final int[] output = new int[] { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 }; // Length of SET_COUNT
 
         for (int i = 0; i < sets.length; i++) {
             output[sets[i]]++;
@@ -1098,46 +1131,43 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     public boolean passesFilter(final HeroStats heroStats, final OptimizationRequest request, final int[] sets) {
-        if (heroStats.atk < request.inputAtkMinLimit || heroStats.atk > request.inputAtkMaxLimit
-                ||  heroStats.hp  < request.inputHpMinLimit  || heroStats.hp > request.inputHpMaxLimit
-                ||  heroStats.def < request.inputDefMinLimit || heroStats.def > request.inputDefMaxLimit
-                ||  heroStats.spd < request.inputSpdMinLimit || heroStats.spd > request.inputSpdMaxLimit
-                ||  heroStats.cr < request.inputCrMinLimit   || heroStats.cr > request.inputCrMaxLimit
-                ||  heroStats.cd < request.inputCdMinLimit   || heroStats.cd > request.inputCdMaxLimit
-                ||  heroStats.eff < request.inputEffMinLimit || heroStats.eff > request.inputEffMaxLimit
-                ||  heroStats.res < request.inputResMinLimit || heroStats.res > request.inputResMaxLimit
-                ||  heroStats.cp < request.inputMinCpLimit || heroStats.cp > request.inputMaxCpLimit
-                ||  heroStats.hpps < request.inputMinHppsLimit || heroStats.hpps > request.inputMaxHppsLimit
-                ||  heroStats.ehp < request.inputMinEhpLimit || heroStats.ehp > request.inputMaxEhpLimit
-                ||  heroStats.ehpps < request.inputMinEhppsLimit || heroStats.ehpps > request.inputMaxEhppsLimit
-                ||  heroStats.dmg < request.inputMinDmgLimit || heroStats.dmg > request.inputMaxDmgLimit
-                ||  heroStats.dmgps < request.inputMinDmgpsLimit || heroStats.dmgps > request.inputMaxDmgpsLimit
-                ||  heroStats.mcdmg < request.inputMinMcdmgLimit || heroStats.mcdmg > request.inputMaxMcdmgLimit
-                ||  heroStats.mcdmgps < request.inputMinMcdmgpsLimit || heroStats.mcdmgps > request.inputMaxMcdmgpsLimit
-                ||  heroStats.dmgh < request.inputMinDmgHLimit || heroStats.dmgh > request.inputMaxDmgHLimit
-                ||  heroStats.dmgd < request.inputMinDmgDLimit || heroStats.dmgd > request.inputMaxDmgDLimit
-                ||  heroStats.s1 < request.inputMinS1Limit || heroStats.s1 > request.inputMaxS1Limit
-                ||  heroStats.s2 < request.inputMinS2Limit || heroStats.s2 > request.inputMaxS2Limit
-                ||  heroStats.s3 < request.inputMinS3Limit || heroStats.s3 > request.inputMaxS3Limit
-                ||  heroStats.score < request.inputMinScoreLimit || heroStats.score > request.inputMaxScoreLimit
-                ||  heroStats.bs < request.inputMinBSLimit || heroStats.bs > request.inputMaxBSLimit
-                ||  heroStats.priority < request.inputMinPriorityLimit || heroStats.priority > request.inputMaxPriorityLimit
-                ||  heroStats.upgrades < request.inputMinUpgradesLimit || heroStats.upgrades > request.inputMaxUpgradesLimit
-                ||  heroStats.conversions < request.inputMinConversionsLimit || heroStats.conversions > request.inputMaxConversionsLimit
-                ||  heroStats.eq < request.inputMinEquippedLimit || heroStats.eq > request.inputMaxEquippedLimit
-        ) {
+        if (heroStats.getAtk() < request.getInputAtkMinLimit() || heroStats.getAtk() > request.getInputAtkMaxLimit()
+                || heroStats.getHp() < request.getInputHpMinLimit() || heroStats.getHp() > request.getInputHpMaxLimit()
+                || heroStats.getDef() < request.getInputDefMinLimit() || heroStats.getDef() > request.getInputDefMaxLimit()
+                || heroStats.getSpd() < request.getInputSpdMinLimit() || heroStats.getSpd() > request.getInputSpdMaxLimit()
+                || heroStats.getCr() < request.getInputCrMinLimit() || heroStats.getCr() > request.getInputCrMaxLimit()
+                || heroStats.getCd() < request.getInputCdMinLimit() || heroStats.getCd() > request.getInputCdMaxLimit()
+                || heroStats.getEff() < request.getInputEffMinLimit() || heroStats.getEff() > request.getInputEffMaxLimit()
+                || heroStats.getRes() < request.getInputResMinLimit() || heroStats.getRes() > request.getInputResMaxLimit()
+                || heroStats.getCp() < request.getInputMinCpLimit() || heroStats.getCp() > request.getInputMaxCpLimit()
+                || heroStats.getHpps() < request.getInputMinHppsLimit() || heroStats.getHpps() > request.getInputMaxHppsLimit()
+                || heroStats.getEhp() < request.getInputMinEhpLimit() || heroStats.getEhp() > request.getInputMaxEhpLimit()
+                || heroStats.getEhpps() < request.getInputMinEhppsLimit() || heroStats.getEhpps() > request.getInputMaxEhppsLimit()
+                || heroStats.getDmg() < request.getInputMinDmgLimit() || heroStats.getDmg() > request.getInputMaxDmgLimit()
+                || heroStats.getDmgps() < request.getInputMinDmgpsLimit() || heroStats.getDmgps() > request.getInputMaxDmgpsLimit()
+                || heroStats.getMcdmg() < request.getInputMinMcdmgLimit() || heroStats.getMcdmg() > request.getInputMaxMcdmgLimit()
+                || heroStats.getMcdmgps() < request.getInputMinMcdmgpsLimit() || heroStats.getMcdmgps() > request.getInputMaxMcdmgpsLimit()
+                || heroStats.getDmgh() < request.getInputMinDmgHLimit() || heroStats.getDmgh() > request.getInputMaxDmgHLimit()
+                || heroStats.getDmgd() < request.getInputMinDmgDLimit() || heroStats.getDmgd() > request.getInputMaxDmgDLimit()
+                || heroStats.getS1() < request.getInputMinS1Limit() || heroStats.getS1() > request.getInputMaxS1Limit()
+                || heroStats.getS2() < request.getInputMinS2Limit() || heroStats.getS2() > request.getInputMaxS2Limit()
+                || heroStats.getS3() < request.getInputMinS3Limit() || heroStats.getS3() > request.getInputMaxS3Limit()
+                || heroStats.getScore() < request.getInputMinScoreLimit() || heroStats.getScore() > request.getInputMaxScoreLimit()
+                || heroStats.getBs() < request.getInputMinBSLimit() || heroStats.getBs() > request.getInputMaxBSLimit()
+                || heroStats.getPriority() < request.getInputMinPriorityLimit()
+                || heroStats.getPriority() > request.getInputMaxPriorityLimit()
+                || heroStats.getUpgrades() < request.getInputMinUpgradesLimit()
+                || heroStats.getUpgrades() > request.getInputMaxUpgradesLimit()
+                || heroStats.getConversions() < request.getInputMinConversionsLimit()
+                || heroStats.getConversions() > request.getInputMaxConversionsLimit()
+                || heroStats.getEq() < request.getInputMinEquippedLimit() || heroStats.getEq() > request.getInputMaxEquippedLimit()) {
             return false;
         }
 
         final int[] indexArray = convertSetsArrayIntoIndexArray(sets);
         final int index = calculateSetIndex(indexArray);
-        //        System.out.println(Arrays.toString(indexArray));
 
-        if (request.boolArr[index] == false) {
-            return false;
-        }
-
-        return true;
+        return request.getBoolArr()[index];
     }
 
     public Map<Gear, List<Item>> buildItemsByGear(final List<Item> items) {
@@ -1147,12 +1177,12 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                         Function.identity(),
                         gear -> items.stream()
                                 .filter(x -> x.getGear() == gear)
-                                .collect(Collectors.toList())));
+                                .toList()));
     }
 
     public List<Set> getSetsOrElseAll(final List<Set> sets) {
-        if (sets == null || sets.size() == 0) {
-            return ImmutableList.of();
+        if (sets == null || sets.isEmpty()) {
+            return List.of();
         }
         return sets;
     }
@@ -1181,16 +1211,16 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     private void permuteHelper(final List<List<Integer>> list,
-                               final List<Integer> resultList,
-                               final int [] arr,
-                               final boolean [] used) {
+            final List<Integer> resultList,
+            final int[] arr,
+            final boolean[] used) {
 
         // Base case
         if (resultList.size() == arr.length) {
             list.add(new ArrayList<>(resultList));
         } else {
             for (int i = 0; i < arr.length; i++) {
-                if (used[i] || i > 0 && arr[i] == arr[i-1] && !used[i - 1]) {
+                if (used[i] || i > 0 && arr[i] == arr[i - 1] && !used[i - 1]) {
                     // If element is already used
                     continue;
                 }
@@ -1209,13 +1239,8 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
     }
 
     public void addCalculatedFields(OptimizationRequest request) {
-//        final boolean[] permutations = new boolean[SET_EXPONENTIAL];
-//        final int[] setPermutationIndicesPlusOne = new int[SET_EXPONENTIAL];
         Arrays.fill(permutations, false);
         Arrays.fill(setPermutationIndicesPlusOne, 0);
-//        int[] setSolutionCounters;
-
-//        setSolutionCounters = new int[1];
 
         final List<Set> inputSets1 = getSetsOrElseAll(request.getInputSetsOne());
         final List<Set> inputSets2 = getSetsOrElseAll(request.getInputSetsTwo());
@@ -1226,7 +1251,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             // [0][0][0] All valid
 
             Arrays.fill(permutations, true);
-//            setSolutionCounters = new int[1];
             setPermutationIndicesPlusOne[0] = 1;
         } else if (setFormat == 1) {
             // [4][2][0]
@@ -1237,30 +1261,19 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
                     List<List<Integer>> allSolutions = permute(indices);
 
-//                    setSolutionCounters = new int[allSolutions.size() * 16];
                     for (int i = 0; i < allSolutions.size(); i++) {
-                        final int[] solution = allSolutions.get(i).stream().mapToInt(x->x).toArray();
+                        final int[] solution = allSolutions.get(i).stream().mapToInt(x -> x).toArray();
                         final int index1D = calculateSetIndex(solution);
 
-//                        int[] setSolutionCounter = convertSetsToSetCounters(solution);
-//                        for (int j = 0; j < 16; j++) {
-//                            setSolutionCounters[i*16 + j] = setSolutionCounter[j];
-//                        }
-//
                         permutations[index1D] = true;
                         setPermutationIndicesPlusOne[index1D] = i + 1;
                     }
-                    //                    System.out.println(Arrays.toString(indices));
-                    //                    System.out.println(set1);
-                    //                    System.out.println(set2);
-                    //                    System.out.println(index1D);
-                    //                    System.out.println("----");
                 }
             }
         } else if (setFormat == 2) {
             // [4][0][0]
 
-            final int[] missing = new int[]{0, 0};
+            final int[] missing = new int[] { 0, 0 };
             for (Set set1 : inputSets1) {
                 final int[] indices = ArrayUtils.addAll(set1.getIndices(), missing);
                 for (int a = 0; a < SET_COUNT; a++) {
@@ -1271,29 +1284,19 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
                         List<List<Integer>> allSolutions = permute(indicesInstance);
 
-//                        setSolutionCounters = new int[allSolutions.size() * 16];
                         for (int i = 0; i < allSolutions.size(); i++) {
-                            final int[] solution = allSolutions.get(i).stream().mapToInt(x->x).toArray();
+                            final int[] solution = allSolutions.get(i).stream().mapToInt(x -> x).toArray();
                             final int index1D = calculateSetIndex(solution);
 
-//                            int[] setSolutionCounter = convertSetsToSetCounters(solution);
-//                            for (int j = 0; j < 16; j++) {
-//                                setSolutionCounters[i*16 + j] = setSolutionCounter[j];
-//                            }
-//
                             permutations[index1D] = true;
                             setPermutationIndicesPlusOne[index1D] = i + 1;
                         }
-                        //                        System.out.println(Arrays.toString(indicesInstance));
-                        //                        System.out.println(set1);
-                        //                        System.out.println(index1D);
-                        //                        System.out.println("----");
                     }
                 }
             }
         } else if (setFormat == 3) {
             // [2][0][0]
-            final int[] missing = new int[]{0, 0, 0, 0};
+            final int[] missing = new int[] { 0, 0, 0, 0 };
             for (Set set1 : inputSets1) {
                 final int[] indices = ArrayUtils.addAll(set1.getIndices(), missing);
                 for (int a = 0; a < SET_COUNT; a++) {
@@ -1308,23 +1311,13 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
                                 final List<List<Integer>> allSolutions = permute(indicesInstance);
 
-//                                setSolutionCounters = new int[allSolutions.size() * 16];
                                 for (int i = 0; i < allSolutions.size(); i++) {
-                                    final int[] solution = allSolutions.get(i).stream().mapToInt(x->x).toArray();
+                                    final int[] solution = allSolutions.get(i).stream().mapToInt(x -> x).toArray();
                                     final int index1D = calculateSetIndex(solution);
 
-//                                    int[] setSolutionCounter = convertSetsToSetCounters(solution);
-//                                    for (int j = 0; j < 16; j++) {
-//                                        setSolutionCounters[i*16 + j] = setSolutionCounter[j];
-//                                    }
-//
                                     permutations[index1D] = true;
                                     setPermutationIndicesPlusOne[index1D] = i + 1;
                                 }
-                                //                                System.out.println(Arrays.toString(indicesInstance));
-                                //                                System.out.println(set1);
-                                //                                System.out.println(index1D);
-                                //                                System.out.println("----");
                             }
                         }
                     }
@@ -1334,10 +1327,11 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
         } else if (setFormat == 4) {
             // [2][2][0]
 
-            final int[] missing = new int[]{0, 0};
+            final int[] missing = new int[] { 0, 0 };
             for (Set set1 : inputSets1) {
                 for (Set set2 : inputSets2) {
-                    final int[] indices = ArrayUtils.addAll(ArrayUtils.addAll(set1.getIndices(), set2.getIndices()), missing);
+                    final int[] indices = ArrayUtils.addAll(ArrayUtils.addAll(set1.getIndices(), set2.getIndices()),
+                            missing);
                     for (int a = 0; a < SET_COUNT; a++) {
                         for (int b = 0; b < SET_COUNT; b++) {
                             final int[] indicesInstance = ArrayUtils.clone(indices);
@@ -1346,24 +1340,13 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
                             List<List<Integer>> allSolutions = permute(indicesInstance);
 
-//                            setSolutionCounters = new int[allSolutions.size() * 16];
                             for (int i = 0; i < allSolutions.size(); i++) {
-                                final int[] solution = allSolutions.get(i).stream().mapToInt(x->x).toArray();
+                                final int[] solution = allSolutions.get(i).stream().mapToInt(x -> x).toArray();
                                 final int index1D = calculateSetIndex(solution);
 
-//                                int[] setSolutionCounter = convertSetsToSetCounters(solution);
-//                                for (int j = 0; j < 16; j++) {
-//                                    setSolutionCounters[i*16 + j] = setSolutionCounter[j];
-//                                }
-//
                                 permutations[index1D] = true;
                                 setPermutationIndicesPlusOne[index1D] = i + 1;
                             }
-                            //                            System.out.println(Arrays.toString(indicesInstance));
-                            //                            System.out.println(set1);
-                            //                            System.out.println(set2);
-                            //                            System.out.println(index1D);
-                            //                            System.out.println("----");
                         }
                     }
                 }
@@ -1374,29 +1357,18 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             for (Set set1 : inputSets1) {
                 for (Set set2 : inputSets2) {
                     for (Set set3 : inputSets3) {
-                        final int[] indices = ArrayUtils.addAll(ArrayUtils.addAll(set1.getIndices(), set2.getIndices()), set3.getIndices());
+                        final int[] indices = ArrayUtils.addAll(ArrayUtils.addAll(set1.getIndices(), set2.getIndices()),
+                                set3.getIndices());
 
                         List<List<Integer>> allSolutions = permute(indices);
 
-//                        setSolutionCounters = new int[allSolutions.size() * 16];
                         for (int i = 0; i < allSolutions.size(); i++) {
-                            final int[] solution = allSolutions.get(i).stream().mapToInt(x->x).toArray();
+                            final int[] solution = allSolutions.get(i).stream().mapToInt(x -> x).toArray();
                             final int index1D = calculateSetIndex(solution);
 
-//                            int[] setSolutionCounter = convertSetsToSetCounters(solution);
-//                            for (int j = 0; j < 16; j++) {
-//                                setSolutionCounters[i*16 + j] = setSolutionCounter[j];
-//                            }
-//
                             permutations[index1D] = true;
                             setPermutationIndicesPlusOne[index1D] = i + 1;
                         }
-                        //                        System.out.println(Arrays.toString(indices));
-                        //                        System.out.println(set1);
-                        //                        System.out.println(set2);
-                        //                        System.out.println(set3);
-                        //                        System.out.println(index1D);
-                        //                        System.out.println("----");
                     }
                 }
             }
@@ -1406,8 +1378,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
 
         request.setBoolArr(permutations);
         request.setSetPermutationIndicesPlusOne(setPermutationIndicesPlusOne);
-//        request.setSetSolutionCounters(setSolutionCounters);
-
     }
 
     public static GpuOptimizerKernel selectKernel(
@@ -1443,8 +1413,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
             final long rSize,
             final long bSize,
             final long max,
-            final int[] longSetMasks
-    ) {
+            final int[] longSetMasks) {
         if (request.getSetFormat() == 0) {
             return new SetFormat000OptimizerKernel(
                     request,
@@ -1479,8 +1448,7 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                     rSize,
                     bSize,
                     max,
-                    longSetMasks
-            );
+                    longSetMasks);
         }
         return new GpuOptimizerKernel(
                 request,
@@ -1515,62 +1483,6 @@ public class OptimizationRequestHandler extends RequestHandler implements HttpHa
                 rSize,
                 bSize,
                 max,
-                longSetMasks
-        );
+                longSetMasks);
     }
 }
-
-
-//        System.out.println("DEBUG WEAPONS");
-//
-//        for (int i = 0; i < allweapons.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedWeaponAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
-//
-//        System.out.println("DEBUG HELMETS");
-//
-//        for (int i = 0; i < allhelmets.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedHelmetAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
-//
-//        System.out.println("DEBUG ARMORS");
-//
-//        for (int i = 0; i < allarmors.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedArmorAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
-//
-//        System.out.println("DEBUG NECKLACES");
-//
-//        for (int i = 0; i < allnecklaces.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedNecklaceAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
-//
-//        System.out.println("DEBUG RINGS");
-//
-//        for (int i = 0; i < allrings.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedRingAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
-//
-//        System.out.println("DEBUG BOOTS");
-//
-//        for (int i = 0; i < allboots.length; i++) {
-//            for (int j = 0; j < 16; j++) {
-//                System.out.print(flattenedBootAccs[i * 16 + j] + "     ");
-//            }
-//            System.out.println();
-//        }
